--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,9 +15,7 @@
     ],
     "skipLibCheck": true,
     "noEmit": true,
-    "types": [
-      "chrome"
-    ],
+    "types": [],
     "baseUrl": ".",
     "paths": {
       "@/*": [
