--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,17 @@
   "name": "WindClipper",
   "version": "1.0.0",
   "action": {
-    "default_popup": "popup.html"
+    "default_title": "windclipper"
+  },
+  "permissions": [
+    "activeTab",
+    "tabs",
+    "scripting",
+    "declarativeContent"
+  ],
+  "background": {
+    "service_worker": "src/background/background.ts",
+    "type": "module"
   },
   "content_scripts": [
     {
