feat: add icons

--- a/manifest.json
+++ b/manifest.json
@@ -2,13 +2,23 @@
   "manifest_version": 3,
   "name": "WindClipper",
   "version": "1.0.0",
+  "icons": {
+    "16": "src/assets/images/16.png",
+    "48": "src/assets/images/48.png",
+    "128": "src/assets/images/128.png"
+  },
   "action": {
-    "default_title": "windclipper"
+    "default_title": "windclipper",
+    "default_icon": "src/assets/images/48.png",
+    "icons": {
+      "16": "src/assets/images/16.png",
+      "48": "src/assets/images/48.png",
+      "128": "src/assets/images/128.png"
+    }
   },
   "permissions": [
     "activeTab",
     "tabs",
-    "scripting",
     "declarativeContent"
   ],
   "background": {
